Part-way through Naomi's Ch1 comments

--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -10,11 +10,11 @@
 
 Many great results come from study at the intersection of two fields, and the combination of astronomy and informatics is no exception. The resulting interdisciplinary field is called \defn{astroinformatics}, and concerns the application of statistical and machine learning techniques to problems in astronomy and astrophysics.
 % I am a strong believer in the benefits of interdisciplinary study to both fields: by studying astroinformatics, we can gain new applications for existing machine learning methodology, as well as gain a greater understanding of the problems faced in astronomy.
-Machine learning, a collection of methods for formalising and solving data-driven problems at scale, is a natural fit for radio astronomy: Radio astronomy faces a `data deluge' thanks to new and upgraded telescopes and associated wide-area surveys to be undertaken with them. The goal in the near future is to be able to process data---and conduct science on that data---on the fly as the volume of data grows too large to store. This is a requirement for the Square Kilometre Array (SKA), a grand international undertaking to build a distributed radio array across Western Australia and South Africa with a collecting area of one square kilometre. There exists no comparable telescope today. The SKA will be able to perform new tests of general relativity, help pin down the large-scale structure of the Universe, investigate the mysteries of the epoch of reionisation, probe the history of galaxy evolution to new extents, and perhaps make unexpected new discoveries \citep{diamond_ska_2017}.
+Machine learning, a collection of methods for formalising and solving data-driven problems at scale, is a natural fit for radio astronomy: Radio astronomy faces a `data deluge' thanks to new and upgraded telescopes and associated wide-area surveys to be undertaken with them. The goal in the near future is to be able to process data---and conduct science on that data---on the fly as the volume of data grows too large to store. This is a requirement for the Square Kilometre Array (SKA), a grand international undertaking to build a distributed radio array across Western Australia and South Africa with an intended collecting area of one square kilometre. There exists no comparable telescope today. The SKA will be able to perform new tests of general relativity, help pin down the large-scale structure of the Universe, investigate the mysteries of the epoch of reionisation, probe the history of galaxy evolution to new extents, and perhaps make unexpected new discoveries \citep{diamond_ska_2017}.
 
-The SKA will have technical challenges thus far only touched upon by radio astronomy. Raw data will stream from the telescope antennae at 2 petabytes per second, and up to 300 petabytes per year of science data is expected to be generated \citep{diamond_ska_2017}. This is a phenomenal amount of data, much of which won't be stored, and the community expectation is that machine learning will provide avenues to conduct science with such a large dataset. Precursor projects to the SKA have begun to investigate these pathways \citep[e.g.][]{bonaldi_square_2020,kapinska_emu_2020,mostert_unveiling_2020}.
+The SKA will have technical challenges unlike any so far in radio astronomy. Raw data will stream from the telescope antennae at 2 petabytes per second, and up to 300 petabytes per year of science data is expected to be generated \citep{diamond_ska_2017}. This is a phenomenal amount of data, much of which won't be stored, and the community expectation is that machine learning will provide avenues to conduct science with such a large dataset. Precursor projects to the SKA have begun to investigate these pathways \citep[e.g.][]{bonaldi_square_2020,kapinska_emu_2020,mostert_unveiling_2020}.
 
-Even without the SKA, the data deluge has already begun. Three precursor telescopes have been constructed: the Australian Square Kilometre Array Pathfinder \linebreak(ASKAP) and Murchison Widefield Array (MWA) in Western Australia, and MeerKAT in South Africa. While these will eventually form part of the SKA, they are already online and generating science data at astonishing rates. ASKAP will soon conduct six surveys of the entire southern radio sky: the Evolutionary Map of the Universe \citep[EMU;][]{norris11,kapinska_emu_2020}, the Widefield ASKAP L-Band Legacy All-Sky Blind Survey \citep[WALLABY]{koribalski_wallaby_2020}, the First Large Absorption Survey in HI (FLASH), an ASKAP Survey for Variables and Slow Transients \citep[VAST;][]{murphy_vast_2013}, the Galactic ASKAP Spectral Line Survey (GASKAP), and the Polarisation Sky Survey of the Universe's Magnetism (POSSUM). Atop these future surveys, the recent Rapid ASKAP Continuum Survey \citep[RACS;][]{mcconnell_rapid_2020} has redefined our knowledge of the southern radio sky with shallow observations at 15 arcsecond resolution---compare to the previous largest radio survey, the NRAO VLA Sky Survey \citep[NVSS;][]{condon98nvss}, with 45 arcsecond resolution over the northern sky.
+Even without the SKA, the data deluge has already begun. Three precursor telescopes have been constructed: the Australian Square Kilometre Array Pathfinder \linebreak(ASKAP) and Murchison Widefield Array (MWA) in Western Australia, and MeerKAT in South Africa. While MeerKAT will eventually form part of the SKA itself, all three are already online and generating science data at astonishing rates. ASKAP will soon conduct six surveys of the entire southern radio sky: the Evolutionary Map of the Universe \citep[EMU;][]{norris11,kapinska_emu_2020}, the Widefield ASKAP L-Band Legacy All-Sky Blind Survey \citep[WALLABY]{koribalski_wallaby_2020}, the First Large Absorption Survey in HI (FLASH), an ASKAP Survey for Variables and Slow Transients \citep[VAST;][]{murphy_vast_2013}, the Galactic ASKAP Spectral Line Survey (GASKAP), and the Polarisation Sky Survey of the Universe's Magnetism (POSSUM); as well as the deeper but smaller Deep Investigation of Neutral Gas Origins (DINGO) and the Commensal Real-Time ASKAP Fast-Transients survey \citep[CRAFT;][]{macquart10craft}. Atop these future surveys, the recent Rapid ASKAP Continuum Survey \citep[RACS;][]{mcconnell_rapid_2020} has redefined our knowledge of the southern radio sky with shallow observations at 15 arcsecond resolution---compare to the previous largest radio survey, the NRAO VLA Sky Survey \citep[NVSS;][]{condon98nvss}, with 45 arcsecond resolution over the northern sky.
 
 Machine learning methods for radio astronomy will be developed for and tested upon surveys like RACS and EMU. The path between an astronomical problem and a machine learning problem, however, is not a straightforward one. The goal when casting an astronomy question as something mathematical or computational is to convert the question into one with a known method of solution, such as classification or regression. Along the way, astronomical concepts and assumptions need to be turned into something a computer can deal with. Despite the wide availability of machine learning software and tools, there is no automatic or easy way to make this transformation. This necessitates research in astroinformatics.
 
@@ -24,7 +24,7 @@ This thesis concerns applications of machine learning to radio astronomy for the
 \section{Problems in extragalactic radio astronomy}
 \label{sec:problems-radio-astronomy}
 
-    The main objects of interest in extragalactic radio astronomy are active galactic nuclei (AGN, \autoref{sec:agn}), intensely energetic objects at the centre of galaxies. AGN actively accrete matter and eject huge jets of plasma that develop into extended lobes over scales much larger than those of the galaxy itself. Radio astronomy has many uses for AGN: their energy scales provide a test-bed for high energy physics, and the extremely bright lobes and jets can be seen throughout the Universe making AGN an accessible probe of the distant and old Universe.
+    Galaxies produce radio emission through a variety of methods. The main emission mechanisms are star formation and active galactic nuclei (AGN, \autoref{sec:agn}) and only the latter show extended structure well beyond the galaxy itself. AGN are the central focus of this thesis. They are intensely energetic objects at the centre of galaxies, which actively accrete matter and eject huge jets of plasma that develop into extended lobes over huge distances. Radio astronomy has many uses for AGN: their energy scales provide a test-bed for high energy physics, and the extremely bright lobes and jets can be seen throughout the Universe making AGN an accessible probe of the distant and old Universe.
 
     AGN are thought to be critical to galaxy evolution and perhaps the early reionisation of the Universe \citep{bosch-ramon_role_2018}, but their exact role in their host galaxies is an open question. The radiative and mechanical energy released by AGN impacts the interstellar medium (ISM) and is a key component of contemporary galaxy simulations and models \citep{morganti_many_2017}. The quenching of star formation due to AGN activity is called \defn{AGN feedback}, the idea being that the energy expelled from an AGN is returned to the ISM of the galaxy, heating the gas so it cannot condense into stars. The different impacts of radiative and mechanical energy, the location and scales within the galaxy for which star formation is quenched, and whether star formation material is ejected from the galaxy by the AGN are all questions \citep{husemann_reality_2018}. Solving these questions requires an understanding of AGN at both small and large scales, as well as connecting AGN to their host galaxies at other wavelengths so that redshift, emission lines, star formation rates, etc. can be determined.
 
