--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -4550,6 +4550,13 @@
           J1420{\textendash}0545 LARGE.pdf:application/pdf}
 }
 
+ @article{macquart10craft,
+  title={The Commensal Real-Time ASKAP Fast-Transients ({CRAFT}) Survey},
+  volume={27},
+  DOI={10.1071/AS09082},
+  number={3}, journal={Publications of the Astronomical Society of Australia}, author={Macquart, Jean-Pierre and Bailes, M. and Bhat, N. D. R. and Bower, G. C. and Bunton, J. D. and Chatterjee, S. and Colegate, T. and Cordes, J. M. and D’Addario, L. and Deller, A. and et al.}, year={2010}, pages={272--282}}
+
+
 @Article{     majewski_wasserstein_2018,
   title     = {The {Wasserstein} {Distance} as a {Dissimilarity}
           {Measure} for {Mass} {Spectra} with {Application} to
