updated intro + maybe broke APA?

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -29,6 +29,19 @@
   doi       = {10.1093/mnras/sty1308},
 }
 
+@Article{     alger21rlfs,
+  author    = {{Alger}, M.~J. and Wong, O. I. and Ong, C. S. and McClure-Griffiths, N. M. and Andernach, H. and Rudnick, L. and Shabala, S. S. and Garon, A. F. and Banfield, J. K. and Kapi\'nska, A. D. and Norris, R. P. and Thomson, A. J. M.},
+  title     = {{Radio} {Galaxy} {Zoo}: radio luminosity functions of extended sources},
+  year      = {in prep.},
+}
+
+@article{alger2021interpretable,
+      title={Interpretable {Faraday} Complexity Classification}, 
+      author={M. J. Alger and J. D. Livingston and N. M. McClure-Griffiths and J. L. Nabaglo and O. I. Wong and C. S. Ong},
+      year={in press},
+      journal={\pasa},
+}
+
 @Article{     alhassan_first_2018,
   title     = {The {FIRST} {Classifier}: compact and extended radio
           galaxy classification using deep Convolutional Neural
