--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -34,6 +34,7 @@
 \usepackage[english]{babel}
 \usepackage{csquotes}
 \usepackage[style=apa,natbib=true,uniquename=false,uniquelist=false,backend=biber]{biblatex}
+\DeclareLanguageMapping{english}{english-apa}
 
 \DeclareSourcemap{
   \maps[datatype=bibtex]{
@@ -44,9 +45,6 @@
 }
 
 \addbibresource{thesis.bib}
-\addbibresource{atlas.bib}
-\addbibresource{sugar-glider.bib}
-\addbibresource{extended-rlf.bib}
 
 \usepackage[normalem]{ulem}
 \usepackage[table]{xcolor}
